--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,8 +49,8 @@ ext {
     constraintLayoutVersion = '1.1.3'
     recyclerViewVersion = '1.2.1'
     cardViewVersion = '1.0.0'
-    coroutines='1.6.3'
-    material='1.7.0-alpha02'
+    coroutines = '1.6.3'
+    material = '1.7.0-alpha02'
 
     gsonVersion = '2.8.9'
     retrofit2 = '2.7.0'
@@ -77,8 +77,8 @@ dependencies {
 
     //LiveData, ViewModel
     implementation "androidx.lifecycle:lifecycle-extensions:$archLifecycleVersion"
-    //implementation 'androidx.appcompat:appcompat:1.1.0'
-    //implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation 'androidx.appcompat:appcompat:1.1.0'
+    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.5.0-rc02'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.1'
@@ -98,15 +98,25 @@ dependencies {
     implementation "com.squareup.okhttp3:okhttp:$okhttp3"
     implementation "com.squareup.okhttp3:logging-interceptor:$okhttp3"
 
-    //Glide
-    implementation "com.github.bumptech.glide:glide:$glideVersion"
-    kapt "com.github.bumptech.glide:compiler:$glideVersion"
-
     //Coroutines
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutines"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutines"
 
-    /*testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'*/
+    testImplementation 'junit:junit:4.13.2'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
+    //testImplementation "org.mockito:mockito-android:4.0.0"
+    //androidTestImplementation("org.mockito:mockito-android:2.24.5")
+    //testImplementation "org.mockito.kotlin:mockito-kotlin:4.0.0"
+
+    testImplementation 'org.mockito:mockito-core:4.0.0'
+   // androidTestImplementation 'org.mockito:mockito-android:3.8.0'
+
+   /* testImplementation 'org.mockito:mockito-core:4.0.0'
+    testImplementation "org.mockito.kotlin:mockito-kotlin:4.0.0"*/
+
+    testImplementation "org.mockito:mockito-inline:4.0.0"
+
+    testImplementation 'androidx.arch.core:core-testing:2.1.0'
+    androidTestImplementation "org.jetbrains.kotlin:kotlin-test-junit:$kotlin_version"
+    testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.3'
 }
