--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
         android:networkSecurityConfig="@xml/network_security_config"
         android:theme="@style/AppTheme"
         tools:ignore="AllowBackup">
-        <activity android:name="com.practice.acronym.presentation.screens.DashboardActivity" />
+        <activity android:name="com.practice.acronym.presentation.screens.HomeActivity" />
         <activity android:name="com.practice.acronym.presentation.screens.SplashActivity"
             android:exported="true">
             <intent-filter>
